# ChangeLog for sci-biology/seaview
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/seaview/ChangeLog,v 1.39 2011/02/22 16:53:39 scarabeus Exp $

  22 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -seaview-4.1.ebuild,
  -seaview-4.2.3.ebuild, seaview-4.2.5.ebuild, seaview-4.2.12.ebuild,
  -files/seaview-20071113-glibc-2.10.patch, -files/seaview.desktop:
  Remove old. Say goodbye to pdflib pdf useflag.

  01 Feb 2011; Jeff Gardner <je_fro@gentoo.org> seaview-4.2.12.ebuild:
  Fix to use pkg-config instead of deprecated xft-config.

*seaview-4.2.12 (01 Feb 2011)

  01 Feb 2011; Jeff Gardner <je_fro@gentoo.org> +seaview-4.2.12.ebuild:
  Adding latest version.

  16 Jul 2010; Markos Chandras <hwoarang@gentoo.org> seaview-4.2.5.ebuild:
  Stable on amd64 wrt bug #328429

  16 Jul 2010; Christian Faulhammer <fauli@gentoo.org> seaview-4.2.5.ebuild:
  stable x86, bug 328429

  04 Jul 2010; Mark Loeser <halcy0n@gentoo.org> seaview-4.1.ebuild:
  Change x11-libs/fltk[-noxft] dep to fltk[xft] as the useflag has been
  renamed

*seaview-4.2.5 (16 May 2010)

  16 May 2010; Jeff Gardner <je_fro@gentoo.org> +seaview-4.2.5.ebuild:
  Latest version, clean out old.

*seaview-4.2.3 (20 Mar 2010)

  20 Mar 2010; Andrey Kislyuk <weaver@gentoo.org>
  -files/seaview-4.2-gcc44.patch, -seaview-4.2.ebuild,
  +seaview-4.2.3.ebuild:
  Version bump and address bug 290900

  09 Mar 2010; Jonathan Callen <abcd@gentoo.org> seaview-4.1.ebuild,
  seaview-4.2.ebuild:
  QA: Do not use absolute path to icon when in standard dirs (in
  make_desktop_entry())

*seaview-4.2 (18 Oct 2009)

  18 Oct 2009; Andrey Kislyuk <weaver@gentoo.org>
  +files/seaview-4.2-gcc44.patch, +seaview-4.2.ebuild:
  Version bump and gcc-4.4 patch

  07 Oct 2009; Andrey Kislyuk <weaver@gentoo.org> metadata.xml,
  +seaview-4.1.ebuild, seaview-20071113.ebuild:
  Drop keywords in seaview-20071113, will expedite 4.1

*seaview-4.1 (07 Oct 2009)
