@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST seaview_4.2.12.tar.gz 302803 RMD160 3adb9b646da13778fded1751755ddcd3b25ac74d SHA1 29254ec7d6ca496082b5424d9c8b1bde0ca169a3 SHA256 fc812daee9570be38b39e2f08dac78ca4d3a0adefb801f79f1d15e71d60f9b6a
 DIST seaview_4.2.5.tar.gz 319110 RMD160 2aa82be247367790e1b84e4526ac92a98c126551 SHA1 e3ade6b2078aa1b617aad10fb124fe0309084638 SHA256 1d5d555a1afcec0218db99a132942edfdfcb05b7bb93de6c124d7d30315677c9
-EBUILD seaview-4.2.12.ebuild 1815 RMD160 339441a911412e93e410ef3343134847652f27a8 SHA1 fa2c9824afb0366641c91e62dbd6534efbb06c26 SHA256 8d7534d5afd372cb4af3e2eafb1a53be3b8474dd1a2508f7a656585855151f1e
-EBUILD seaview-4.2.5.ebuild 1804 RMD160 7defe05e69b0a7cbb502804f8f0761c9958d9836 SHA1 447a9ac4207a21e00ef9afbb8576bdd2d9863359 SHA256 531f1575ffaec97634a3a02e4d758394d761078aa819d353830ba8420d5038d5
-MISC ChangeLog 6819 RMD160 a6f263ca7ef878c37b31224899add03b1ffc872b SHA1 feae119dea5adcaea349ae2c642d02b062b52a2d SHA256 99c974fcc10806d08fd2e786ccb2491fdf04c0b4025d3bfd9f082b2ba57a6ffa
+EBUILD seaview-4.2.12.ebuild 1806 RMD160 6e7fed30b1f3a0124e340d6246a30bd077f8674d SHA1 52cecaeaf988089108be00d101daccad03482c12 SHA256 c5a1d407448ca489bc9a022334a55734cdd58f483a228a27a0b3e441d76a4e58
+EBUILD seaview-4.2.5.ebuild 1795 RMD160 a4e31046fa7b71425ab417bd93d9d8ab3548a280 SHA1 9c68a73d62c827fc586df00db285acb32dd5fc29 SHA256 c02759961c4580ab60b0c4b78f0e9fcbda2f0042922b6f3d66a743291d1e245d
+MISC ChangeLog 6973 RMD160 595b90e993cbee2d7fb9644966c33803d59cbcb4 SHA1 dceeb60078a285a304b5220155361b20e7d2b1a0 SHA256 9e431d81b1751316b09495f87e7339685279268d728ee677166eb9ffd5c2da58
 MISC metadata.xml 619 RMD160 f7bd8491d8c59372963d3f53e322e52d509c0c81 SHA1 d35f32cd0b1171a837f6c9d0dbeb3e396a44fb90 SHA256 ee63d33ca527ca555056c6bc3a7d89fa9b5f32e5f82b7eae27b1c030c80ced9e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2GXVkACgkQgAnW8HDreRayAQCfZt0YslZ/cnh9MxaYNKyeYaDP
+9tIAoNJHZ+EKr66yUO5IS513Q2LTf4yn
+=aAFb
+-----END PGP SIGNATURE-----
