@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/seaview/seaview-4.2.12.ebuild,v 1.3 2011/02/22 16:53:39 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/seaview/seaview-4.2.12.ebuild,v 1.4 2011/03/20 20:02:27 jlec Exp $
 
 EAPI="2"
 
@@ -15,9 +15,9 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="+xft"
 
-DEPEND="x11-libs/fltk:1.1
+DEPEND="x11-libs/fltk:1
 	xft? (	x11-libs/libXft
-			x11-libs/fltk:1.1[xft] )"
+			x11-libs/fltk:1[xft] )"
 RDEPEND="${DEPEND}
 	sci-biology/clustalw
 	|| ( sci-libs/libmuscle sci-biology/muscle )
