@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/seaview
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/seaview/ChangeLog,v 1.39 2011/02/22 16:53:39 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/seaview/ChangeLog,v 1.40 2011/03/20 20:02:27 jlec Exp $
+
+  20 Mar 2011; Justin Lecher <jlec@gentoo.org> seaview-4.2.5.ebuild,
+  seaview-4.2.12.ebuild:
+  x11-libs/fltk SLOTMOVE 1.1 -> 1, corrected ebuild accordingly
 
   22 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -seaview-4.1.ebuild,
   -seaview-4.2.3.ebuild, seaview-4.2.5.ebuild, seaview-4.2.12.ebuild,
